<resources>
    <string name="app_name">MobliebankingLearning</string>
    <string name="main_title">모바일 뱅킹 배우기</string>
    <string name="video">앱 다운로드 배우기</string>
    <string name="login">로그인</string>
    <string name="account">계좌조회</string>
    <string name="transfer">계좌이체</string>
    <string name="menu">메뉴설명</string>
    <string name="make">계좌 만들기</string>
    <string name="certification">인증서 발급</string>
    <string name="id">아이디</string>
    <string name="pattern">패턴으로 로그인</string>
    <string name="password">비밀번호 입력</string>
    <string name="inputId">아이디를 입력</string>
    <string name="pw">비밀번호</string>
    <string name="todo">TODO</string>
    <string name="back">뒤로가기</string>
    <string name="home">홈으로</string>
    <string name="red">강조</string>
    <string name="banking">OO 은행</string>
    <string name="bank">은행 이름</string>
    <string name="countnumber">계좌 번호</string>
    <string name="recipient">받는 분</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accbutton">Button</string>

</resources>