<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bankingback1"
    tools:context=".fragment.AccountFragment">


    <TextView
        android:id="@+id/txt_accfind"
        android:layout_width="191dp"
        android:layout_height="74dp"
        android:layout_marginTop="28dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif-black"
        android:text="@string/account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-black"
        android:text="@string/banking"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/accountname"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginTop="204dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-black"
        android:text="000통장"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/txt_accountnumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textname"
        android:layout_width="126dp"
        android:layout_height="65dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-black"
        android:text="홍길동님"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/txt_accountnumber"
        android:layout_width="230dp"
        android:layout_height="31dp"
        android:autoSizeMaxTextSize="90dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif"
        android:text="1000-000-000000"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <TextView
        android:id="@+id/txt_money"
        android:layout_width="264dp"
        android:layout_height="67dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-black"
        android:text="100,000원"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_accountnumber"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/btn_white"
        android:layout_width="150dp"
        android:layout_height="83dp"
        android:background="#00FFFFFF"
        android:foreground="@drawable/btn_white"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@+id/btn_acc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/btn_acc"
        android:layout_width="150dp"
        android:layout_height="83dp"
        android:background="#00FFFFFF"
        android:foreground="@drawable/btn_acc2"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.862" />

    //button

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="41dp"
        android:layout_height="55dp"
        android:background="#00FFFFFF"
        android:foreground="@drawable/menu"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/btn_home4"
        android:layout_width="56dp"
        android:layout_height="54dp"
        android:background="#03FFFFFF"
        android:foreground="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <Button
        android:id="@+id/btn_back4"
        android:layout_width="130dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:foreground="@drawable/btn_back"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991" />

    <Button
        android:id="@+id/btn_red4"
        android:layout_width="116dp"
        android:layout_height="133dp"

        android:backgroundTint="#03FFFFFF"
        android:contentDescription="@string/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846"
        app:strokeColor="#F44336"
        app:strokeWidth="10dp" />




</androidx.constraintlayout.widget.ConstraintLayout>